synth instruments detune adjustment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,4 +58,6 @@
     <string name="amplitude">Amplitude</string>
     <string name="phase">Phase</string>
     <string name="pitch">Pitch</string>
+    <string name="voices">Voices</string>
+    <string name="detune">Detune</string>
 </resources>
