synth instruments oscillators number picker

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,4 +60,5 @@
     <string name="pitch">Pitch</string>
     <string name="voices">Voices</string>
     <string name="detune">Detune</string>
+    <string name="oscillators">Oscillators</string>
 </resources>
